# webxtile

./: .gitignore  README.md
gridtiles/: __init__.py
js/: README.md  gridtiles.js  package-lock.json  package.json  webxtile.js
js/tests/: read_tiles.mjs
py/: pyproject.toml
py/docs/: api.md  format.md  guide.md  index.md
py/gridtiles/: __init__.py
py/tests/: test_js.py  test_roundtrip.py
py/webxtile/: __init__.py
