[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webxtile"
version = "0.0.1"
description = "3D geographic grid octree storage with msgpack tiles; full xarray/CF roundtrip"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "xarray>=0.18",
    "numpy",
    "msgpack>=1.0",
    "msgpack-numpy>=0.4.7",
    "scipy",
]

[project.optional-dependencies]
projection = ["pyproj"]
dev = ["pytest", "numpy"]

# ── xarray engine registration ────────────────────────────────────────────────
# Allows:  xr.open_dataset("tiles/", engine="webxtile")
[project.entry-points."xarray.backends"]
webxtile = "webxtile:WebxtileBackend"
